@startuml

namespace cash {

    namespace tool {

        class Observer <T> {
            +Observer()
            +Observer(Observer)
            +Observer    operator=(Observer)
            +~Observer()
            __
            +void   update(T)
        }

        class   Subject <T> {
            -mObservers : vector<Observer<T> *>
            -mMutex : mutex
            __
            +Subject()
            +Subject(Subject)
            +Subject &operator=(Subject &)
            +~Subject()
            ..
            +void   attach(Observer<T>)
             +void   notify()
        }

    }

    namespace win {

        cash.tool.Observer <|.. PaymentTerminal

        namespace cashier {

            namespace widget {

                cash.tool.Subject <|.. Cashier

                class   Cashier {
                    +runPayment()
                    ..
                    +void   attach(Observer<PaymentOrder>)
                    +void   notify()
                }

            }

        }

        class   PaymentTerminal {
            +void   update(shared_pr<PaymentOrder>)
        }

    }

}

@enduml